﻿[B]Version 2.2.3[/B]
[+] Проигрыватель: Добавлена возможность запускать через .strm файлы (plugin://plugin.video.torrenter/?action=playSTRM&url=URL_ENCODED_MAGNET_PATH_HTTP)

[B]Version 2.2.2[/B]
[+] Списки Медиа: Обновлен KickAssSo (by GriffeyJuni0r)
[+] Поиск: Исправлен RuTor
[+] Поиск: Исправлен RuTrackerOrg, T411FR

[B]Version 2.2.1[/B]
[+] Поиск: Исправлен EZTV

[B]Version 2.2.0[/B]
[+] Поиск: Добавлен BTDigg (magnet)

[B]Version 2.1.9[/B]
[+] Списки Медиа: Баг-фикс TMDB SSL, нижний переход на следующую страницу
[+] Списки Медиа: Расширенная информация KickAssSo, EZTV
[+] Списки Медиа: Добавлен ThePirateBay
[+] Списки Медиа: Добавлен SWESUB
[+] Списки Медиа: Дополнительная фраза в вариантах поиска

[B]Version 2.1.6[/B]
[+] Списки Медиа: Окно информации (пока только KickAssSo). Спасибо evgen_dev
[+] История Поиска: Перенос в начало списка при повторном поиске

[B]Version 2.1.5[/B]
[+] Списки Медиа: Сортировка (пока только KickAssSo)

[B]Version 2.1.4[/B]
[+] Ace Stream: баг-фиксы
[+] Восстановлена работа с MyShows.ru

[B]Version 2.1.3[/B]
[+] Поиск: Добавлен французский t411.me по просьбе Zombi
[+] Множественные баг-фиксы

[B]Version 2.1.2[/B]
[+] Торрент-клиент: Поддержка Deluge WebUI (No SSL)
[+] История Поиска: Возможность изменять запрос с помощью клавиатуры
[+] Поиска: Настройка выбора действия вместо Открытия торрента

[B]Version 2.1.1[/B]
[+] Проигрыватель: Опция продолжать сидировать после просмотра

[B]Version 2.1.0[/B]
[+] Загрузка: Добавлена возможность управлять закачками, а так же возобновлять
[+] Поиск: Возможность замены открытия торрента на вызов контекстного меню

[B]Version 2.0.9[/B]
[+] Загрузка: Добавлена возможность загружать торренты в фоне
[+] Списки Медиа: Добавлен KickAssSo

[B]Version 2.0.8[/B]
[+] Проигрывание: Добавлена возможность менять путь хранения
[+] Торрент-клиент: Добавлена возможность менять путь скачки

[B]Version 2.0.7[/B]
[+] Поиск: Добавлено несколько зарубежных трекеров